Fixing link son home/base page

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -49,7 +49,7 @@
                             {% else %}
                             	<li><a href="{% url 'login' %}">Login</a></li>
                               <li><a href="{% url 'register' %}">Register</a></li>
-                              <li><a href="{% url 'home' %}login/google-oauth2">Login with Google</a></li>
+                              <li><a href="{% url 'home' %}auth/login/google-oauth2">Login with Google</a></li>
                             {% endif %}
                        </ul>
                        <ul class="nav">
