--- a/django_project/templates/treasure/thread.html
+++ b/django_project/templates/treasure/thread.html
@@ -9,7 +9,8 @@
 
 {% block body_block %}
 
-<div class="hero-unit">
+<div class="hero-unit container">
+
     {% if invalid %}
         <h3>Malformed url</h3>
         <a href="{% url 'home' %}">Return to Homepage</a>
