--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -93,7 +93,6 @@
 
 
 <div id="myratings" class="hero-unit panel panel-default">
-{% if need2rate %}
     <div class="panel-heading clearfix">
         <h4>Downloaded Resources Pending Rating</h4>
     </div>
@@ -102,7 +101,7 @@
             <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                     <tr>
-                        <th>Resource Name</th>
+                        <th>Downloaded Resources</th>
                         <th>Date and Time</th>
                         <th>Have used it?</th>
                         <th>Have rated it?</th>
@@ -121,9 +120,6 @@
             </table>
         </div>
     </div> <!-- close body -->
-{% else %}
-    <p>All downloaded resources have been rated. <a href="{% url 'explore' %}">Explore more</a>?</p>
-{% endif %}
 </div> <!-- close panel -->
 
 {% if MyResources %}
