--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -93,6 +93,7 @@
 
 
 <div id="myratings" class="hero-unit panel panel-default">
+{% if need2rate %}
     <div class="panel-heading clearfix">
         <h4>Downloaded Resources Pending Rating</h4>
     </div>
@@ -120,6 +121,9 @@
             </table>
         </div>
     </div> <!-- close body -->
+    {% else %}
+    <p>No resources have been downloaded. <a href="{% url 'explore' %}">Explore</a>?</p>
+{% endif %}
 </div> <!-- close panel -->
 
 {% if MyResources %}
