--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -120,7 +120,7 @@
     
     				<!-- Main Page -->
     				<section id="MainPage">
-                <div class="span11 container">
+                <div class="container">
                     <!--div class="hero-unit"><h2>This resource is not visible (hidden).<br>The author has chosen to hide it, sorry.</h2></div>
                     <div class="hero-unit"><h2>This resource is not visible (restricted)<br>This resource is only for Scottish teachers, sorry.</h2></div>
                     <div class="hero-unit"><h2>This pack is not visible (hidden)<br>The author has chosen to hide it, sorry.</h2></div>
