--- a/django_project/templates/treasure/register.html
+++ b/django_project/templates/treasure/register.html
@@ -40,16 +40,22 @@
                 {% endfor %}
 
                 {% for field in teacher_form.visible_fields %}
-                    {{ field.errors }}
-                    {{ field.label }}{% render_help_text field %}<br/>
-                    {{ field }}
-                    {% if field.label == "School*" %}
-                    <a class="btn btn-info pull-right" href="{% url 'add_school' %}?register">Add School</a>
-                    {% elif field.label == "Hubs" %}
-                    <a class="btn btn-info pull-right" href="{% url 'add_hub' %}?register">Add Hub</a>
-                    {% endif %}
+                      {% if field.label == "Registered Scottish Teacher?" %}
+                          {{ field.errors }}
+                          {{ field }}{{ field.label }}{% render_help_text field %}
+		                  {% else %}		            
+                          {{ field.errors }}
+                          {{field.label}}{% render_help_text field %}<br/>
+                          {{ field }}
+                          {% if field.label == "School" %}
+                          <a class="btn btn-info pull-right" href="{% url 'add_school' %}?editprofile">Add School</a>
+                          {% elif field.label == "Hubs" %}
+                          <a class="btn btn-info pull-right" href="{% url 'add_hub' %}?editprofile">Add Hub</a>              
+                          {% endif %}
+                      {% endif %}
                     <br/>
                 {% endfor %}
+
 
                 {% for field in user_form.visible_fields %}
                 {% if field.label == "Captcha" %}
