--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -9,7 +9,7 @@
 
 {% block body_block %}
 <div class="span5 hero-unit container panel panel-default">
-        <img class="pull-right" src="{% static 'images/index logo.png'%}"/>
+        <img class="pull-right" alt="logo" src="{% static 'images/index_logo.png'%}"/>
 
             <div class="row panel-heading clearfix">
         <h4>Title</h4></div>
@@ -50,7 +50,7 @@
     </div>
 </div>
     <div class="well" style="width:80%">
-        <h4><emph>{{ num_resources }} Resources;<br>{{ num_packs }} Packs;<br>{{ num_users }} Users.</emph></h4>
+        <h5>{{ num_resources }} Resources;<br>{{ num_packs }} Packs;<br>{{ num_users }} Users.</h5>
     </div>
     {% if top_resources %}
     <hr>
@@ -65,6 +65,7 @@
 
     {% endif %}
 
+</div>
 </div>
 
 <!-- script for table -->
