Adding more alt text to img elements.

--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -38,12 +38,12 @@
             </div>
             <div class="span4">
                 <span>
-                    <a href="./#resource" title="Total Downloads"><img src="{% static 'images/dlicon.png' %}"/>:{{ download_count }}</a>&thinsp;
-                    <a href="./#feedback"title="Total Feedback"><img src="{% static 'images/feedback.png' %}"/>:{{ rating_count }}</a>&thinsp;
-                    <a href="./#forum" title="Total Forum Posts"><img src="{% static 'images/forumicon.png' %}"/>:{{ forum_count }}</a>&thinsp;
-                    <a href="./#pack" title="Number of Packs this Resource is in"><img src="{% static 'images/packicon.png' %}"/>:{{ pack_count }}</a>&thinsp;
-                    <a href="./#want2talk" title="Number of People who want to Discuss this Resource"><img src="{% static 'images/2talkicon.png' %}"/>:{{ 2talk_count }}</a>&thinsp;
-                    <a href="./#change" title="Number of Previous Versions"><img src="{% static 'images/versionsicon.png' %}"/>:{{ version_count }}</a>
+                    <a href="./#resource" title="Total Downloads"><img src="{% static 'images/dlicon.png' %}" alt="downloads"/>:{{ download_count }}</a>&thinsp;
+                    <a href="./#feedback"title="Total Feedback"><img src="{% static 'images/feedback.png' %}" alt="feedback"/>:{{ rating_count }}</a>&thinsp;
+                    <a href="./#forum" title="Total Threads on Forum"><img src="{% static 'images/forumicon.png' %}" alt="thread"/>:{{ forum_count }}</a>&thinsp;
+                    <a href="./#pack" title="Number of Packs this Resource is in"><img src="{% static 'images/packicon.png' %}" alt="packs"/>:{{ pack_count }}</a>&thinsp;
+                    <a href="./#want2talk" title="Number of People who want to Discuss this Resource"><img src="{% static 'images/2talkicon.png' %}" alt="want to talk"/>:{{ 2talk_count }}</a>&thinsp;
+                    <a href="./#change" title="Number of Previous Versions"><img src="{% static 'images/versionsicon.png' %}" alt="versions"/>:{{ version_count }}</a>
                 </span>
                 <hr>
                 
