Adding the basic idea of the help implementation

--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -20,9 +20,9 @@
 <hr>
 <ul class="nav nav-tabs">
     <li><strong>Latest:</strong></li>
-    <li><a href="#LatestResources" data-toggle="tab">Resources</a></li>
-    <li><a href="#LatestFeedback" data-toggle="tab">Feedback</a></li>
-    <li><a href="#LatestPacks" data-toggle="tab">Packs</a></li>
+    <li><a href="#LatestResources" data-toggle="tab">Resources<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></li>
+    <li><a href="#LatestFeedback" data-toggle="tab">Feedback<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></li>
+    <li><a href="#LatestPacks" data-toggle="tab">Packs<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></li>
 </ul>
 <hr>
 <div class="tab-content" id="tabs">
