--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -27,7 +27,7 @@
                     <h4><strong>Description:</strong></h4>
                     <p>{{ description }}</p><br>
                 {% endif %}
-                <h4><strong>Tags:</strong></h4>
+                <h4><strong>Tags:<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></strong></h4>
                 {% if other_tags %}
                     {% for tag in other_tags %}
                         <a href="{% url 'tag' tag.id %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
@@ -81,7 +81,7 @@
         </div>
         
         <div class="hero-unit" id="forum">
-            <h3>Forum</h3>
+            <h3>Forum<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
             
             {% if threads %}
                 <div class="row panel-body">
@@ -132,7 +132,7 @@
         </div>
         
         <div class="hero-unit" id="pack">
-            <h3>Packs</h3>
+            <h3>Packs<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
             {% if partofpacks %}
                 <div class="table-responsive">
                     <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -163,7 +163,7 @@
         </div>
 
         <div class="hero-unit" id="want2talk">
-            <h3>Discuss {{resource_name}}</h3>
+            <h3>Discuss {{resource_name}}<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
             {% if want2talk %}
             <div class="table-responsive">
                 <table id="wanttotalk" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -192,7 +192,7 @@
         
         <div class="hero-unit" id="rating">
         {% if feedback %}
-            <h3>Feedback</h3>
+            <h3>Feedback<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
             <div class="table-responsive">
                 <table id="feedback" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
@@ -231,7 +231,7 @@
         </div>
         
         <div class="hero-unit" id="change">
-            <h3>Changelog</h3>
+            <h3>Changelog<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
             <ul>
                 {% for change in changelog %}
                     {% if change.1 == null %}
@@ -248,7 +248,7 @@
         </div>
 
         {% else %}
-        <div class="hero-unit"><h3>This resource is restricted. Only verified Scottish teachers can access this.</h3></div>
+        <div class="hero-unit"><h3>This resource is restricted<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/>. Only verified Scottish teachers can access this.</h3></div>
         {% endif %}
         
     {% else %}
