--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -10,7 +10,7 @@
 {% block body_block %}
 <div class="span7 hero-unit container panel panel-default">
     <div class="row panel-heading clearfix">
-        <h3>Resources</h3>
+        <h3>Resources<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
     </div>
     <div class="span2"><a class="btn btn-block btn-primary" href="{% url 'add_file_resource' %}">Add File Resource</a></div>
     <div class="span1"></div>
