Adding quintins text to homepage and aboutpage
Also adding a faster way to add materials (now ~one~ less click away ! :o (w0w) great moves (y)

--- a/django_project/templates/treasure/about.html
+++ b/django_project/templates/treasure/about.html
@@ -8,10 +8,12 @@
 
 {% block body_block %}
 <div class="hero-unit">
-    <h2>PLAN C - Sharing</h2>
+    <h2>PLAN C Sharing</h2>
     <div class="row-fluid">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.</p>
+        <p>PLAN C Sharing aims to support all kinds of sharing between computing teachers.  Sharing materials is one thing - but there's more to sharing than materials alone.  We hope that this site will encourage teachers to share their experiences of teaching using particular techniques and tools - their <i>pedagogical content knowledge</i> about computing teaching.  You might comment on particular materials you've used, offer to provide advice to others, or discuss more conceptual issues not relating to any particular activity.  You can also upload edited versions of activities, perhaps targeting a different language, or extending the activity in some way, or improving it.  The site has both an international and Scottish flavour.  Anyone can join and contribute.  But particular activities or discussions can be restricted to those who have been verified to be Scottish school teachers.
+          Please give us feedback on how you find the site - what you'd like changed, added, or removed.</p>
+        <p>This website was created as part of two undergraduate final year projects at the University of Glasgow under the supervision of Professor Quintin Cutts.  The two students involved are/were Dimitrios Kikeridis and Scott Hood.</p>
     </div>
 </div>
-		<center><h6> Project Plan C</h6></center>
+		<center><h6>Plan C Sharing - 2016</h6></center>
 {% endblock %}
