--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -12,8 +12,9 @@
         <img class="pull-right" alt="logo" src="{% static 'images/index_logo.png'%}"/>
 
             <div class="row panel-heading clearfix">
-        <h4>Title</h4></div>
-        <div class="well"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. </div>
+        <h4>PLAN C Sharing</h4></div>
+        <div class="well">PLAN C Sharing aims to support all kinds of sharing between computing teachers.  Sharing materials is one thing - but there's more to sharing than materials alone.  We hope that this site will encourage teachers to share their experiences of teaching using particular techniques and tools - their <i>pedagogical content knowledge</i> about computing teaching.  You might comment on particular materials you've used, offer to provide advice to others, or discuss more conceptual issues not relating to any particular activity.  You can also upload edited versions of activities, perhaps targeting a different language, or extending the activity in some way, or improving it.  The site has both an international and Scottish flavour.  Anyone can join and contribute.  But particular activities or discussions can be restricted to those who have been verified to be Scottish school teachers.
+          Please give us feedback on how you find the site - what you'd like changed, added or removed.</div>
 </div>
         
 <div class="span5 hero-unit">
