--- a/django_project/templates/treasure/about.html
+++ b/django_project/templates/treasure/about.html
@@ -12,7 +12,7 @@
     <div class="row-fluid">
         <p>PLAN C Sharing aims to support all kinds of sharing between computing teachers.  Sharing materials is one thing - but there's more to sharing than materials alone.  We hope that this site will encourage teachers to share their experiences of teaching using particular techniques and tools - their <i>pedagogical content knowledge</i> about computing teaching.  You might comment on particular materials you've used, offer to provide advice to others, or discuss more conceptual issues not relating to any particular activity.  You can also upload edited versions of activities, perhaps targeting a different language, or extending the activity in some way, or improving it.  The site has both an international and Scottish flavour.  Anyone can join and contribute.  But particular activities or discussions can be restricted to those who have been verified to be Scottish school teachers.
           Please give us feedback on how you find the site - what you'd like changed, added, or removed.</p>
-        <p>This website was created as part of two undergraduate final year projects at the University of Glasgow under the supervision of Professor Quintin Cutts.  The two students involved are/were Dimitrios Kikeridis and Scott Hood.</p>
+        <p>This website was created as part of two undergraduate final year projects at the University of Glasgow under the supervision of Professor Quintin Cutts.  The two students involved are/were Dimitrios Kykeridis and Scott Hood.</p>
     </div>
 </div>
 		<center><h6>Plan C Sharing - 2016</h6></center>
