--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -13,7 +13,7 @@
         <header>
         		<h2 class="alt">Welcome back, {{ request.user.teacher.firstname }}</h2>
         		<p>The community values your opinion.
-        			Please remember to <a href="{% url 'my_homepage' %}#myratings">rate</a> the resources you download.</p>
+        			If you have used the resources you have downlaoded, please remember to <a href="{% url 'my_homepage' %}#myratings">mark them as used and provide feedback</a>.</p>
         </header>
     		<footer>
     		    <a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
@@ -93,16 +93,16 @@
 
 
 <div id="myratings" class="hero-unit panel panel-default">
-{% if need2rate %}
+{% if iDownload %}
     <div class="panel-heading clearfix">
-        <h4>Downloaded Resources Pending Rating<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+        <h4>My Downloads<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
     <div class="panel-body">
         <div class="table-responsive">
-            <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <table id="Downloads" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                     <tr>
-                        <th>Downloaded Resources</th>
+                        <th>Resource Name</th>
                         <th>Date and Time</th>
                         <th>Have used it?</th>
                         <th>Have rated it?</th>
@@ -122,16 +122,16 @@
         </div>
     </div> <!-- close body -->
     {% else %}
-    <p>No resources have been downloaded. <a href="{% url 'explore' %}">Explore</a>?</p>
+    <p>No resources have been downloaded. <a href="{% url 'explore' %}">Explore resources</a>?</p>
 {% endif %}
 </div> <!-- close panel -->
 
 {% if MyResources %}
 <div id="mytalk" class="hero-unit panel panel-default">
+    {% if want2talkMine %}
     <div class="panel-heading clearfix">
         <h4>People Willing to talk about my Resources<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
-    {% if want2talkMine %}
         <div class="panel-body">
             <div class="table-responsive">
                 <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -161,13 +161,13 @@
 {% endif %}
 
 <div id="mytalk" class="hero-unit panel panel-default">
+    {% if want2talk %}
     <div class="panel-heading clearfix">
         <h4>Resources I am happy to talk about<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
-    {% if want2talk %}
         <div class="panel-body">
             <div class="table-responsive">
-                <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <table id="Happy2Talk" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th>Resource Name</th>
@@ -190,7 +190,7 @@
         <a class="btn btn-primary pull-right" href="{% url 'talk_hide' 'no' %}">Deactivate All</a>
         <a class="btn btn-primary pull-right" href="{% url 'talk_hide' 'yes' %}">Activate All</a>
     {% else %}
-        <p>No resources selected yet.</p>
+        <p>You have not declared interest in discussing any resources.<a href="{% url 'explore' %}">Explore resources</a>?</p>
     {% endif %}
 </div> <!-- close panel -->
 
@@ -201,6 +201,9 @@ $(document).ready(function(){
 });
 $(document).ready(function(){
     $('#Packs').DataTable();
+});
+$(document).ready(function(){
+    $('#Downloads').DataTable();
 });
 </script>
 
