--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -13,7 +13,7 @@
         <header>
         		<h2 class="alt">Welcome back, {{ request.user.teacher.firstname }}</h2>
         		<p>The community values your opinion.
-        			If you have used the resources you have downlaoded, please remember to <a href="{% url 'my_homepage' %}#myratings">mark them as used and provide feedback</a>.</p>
+        			If you have used the resources you have downloaded, please remember to <a href="{% url 'my_homepage' %}#myratings">mark them as used and provide feedback</a>.</p>
         </header>
     		<footer>
     		    <a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
